--- a/jarviz-graph/package.json
+++ b/jarviz-graph/package.json
@@ -78,6 +78,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-force-graph": "^1.24.1",
+    "react-scripts": "^5.0.1",
     "rimraf": "^2.6.3",
     "style-loader": "^1.0.0",
     "system-bell-webpack-plugin": "^1.0.0",
